5127 BWEB Støtte for virksomhet i Opprett ny sak (#1258)
* Legger til støtte for opprette sak og hente oppgaver knyttet til virksomhet

* fnrdnr -> personIdent etter QA